Added paragraph and list items

--- a/index.html
+++ b/index.html
@@ -5,5 +5,13 @@
 	</head>
 <body>
 	<h1>Hey Youuuuu GUYYYYYYYYSSSSS!!</h1>
+
+	<p>Adding in a paragraph tag.</p>
+
+	<ul>
+		<li>Bears</li>
+		<li>Beets</li>
+		<li>Battlestar Galactica</li>
+	</ul>
 </body>
 </html>
