Added some color here.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html>
 	<head>
 		<title>FEWD27 Test</title>
+
+		<style>
+			body {
+				background-color: #cccccc;
+				color: blue;
+			}
+		</style>
 	</head>
 <body>
 	<h1>Hey Youuuuu GUYYYYYYYYSSSSS!!</h1>
